.helm/templates/010-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diplomapp
  annotations:    
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: asis.org.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
